--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <img src="https://placecats.com/400/400" alt="placeholder of cat" />
+    <img src="https://place.dog/300/200" alt="placeholder of a dog" />
 </body>
 </html>
